--- a/dnc-300-movie-finder-data/dnc-300-movie-finder-data.csproj
+++ b/dnc-300-movie-finder-data/dnc-300-movie-finder-data.csproj
@@ -309,7 +309,7 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
-    <Content Include="Views\MovieFinder\MovieData.cshtml" />
+    <Content Include="Views\MovieFinder\FindMovie.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
